Ad pages dossier

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-<html> 
-    <head>
-    <meta charset="UTF-8" /> 
+<html>
+
+<head>
+    <meta charset="UTF-8" />
     <title> A.G. - CV ! </title>
-    <link rel="stylesheet" href="../styles/index.css"/>
-        <a href="../index.html" class="accueil"> <button> ACCUEIL </button> </a>
-    </head>
+    <link rel="stylesheet" href="../styles/index.css" />
+</head>
 
-    <body>
+<body>
     <header>
-        <img src="../img/profil.jpg" alt="photo_profil" width="220px" height="280px"/>
+        <img src="../img/profil.jpg" alt="photo_profil" id="photo_profil" />
         <h1> Alexia Gomez</h1>
-        <a href="#section" class="moncv" > Contact </a> 
-        </header>
-    <section id="section">
-            
-    </section>
-    </body>
+        <a href="#section" class="moncv"> Contact </a>
+        <a href="../index.html" class="accueil"> ACCUEIL </a>
+    </header>
 
-    <footer>
-By Gomez Alexia 
-        <div class="social">
-                <a href="https://www.linkedin.com/in/alexia-gomez/"> <img src="../img/linkedin.png" alt="linkedin_icon" height="50px" width="150px"/> </a>
-            </div>
-        <a href="mailto:alexiagomez333@yahoo.fr" > 
-    alexiagomez333 @ yahoo.fr </a>
-    </footer>
+    <section id="section">
+
+    </section>
+</body>
+
+<footer>
+    By Gomez Alexia
+    <div class="social">
+        <a href="https://www.linkedin.com/in/alexia-gomez/">
+            <img src="../img/linkedin.png" alt="linkedin_icon" height="50px" width="150px" /> </a>
+    </div>
+    <a href="mailto:alexiagomez333@yahoo.fr">
+        alexiagomez333 @ yahoo.fr </a>
+</footer>
+
 </html>
