--- a/pages/mes_competences.html
+++ b/pages/mes_competences.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8" /> 
         <title> A.G. - CV ! </title>
         <link rel="stylesheet" href="../styles/index.css"/>
-
-        <a href="../index.html" class="accueil"> <button> ACCUEIL </button> </a>
     </head>
 
     <body>
         <header>
-        <a href="#section" > Mes compétences </a> 
+        <a href="#section" > Mes compétences </a>
+        <a href="../index.html" class="accueil"> ACCUEIL </a> 
         </header>
         <section id="section"> 
         <p> photo profil 
