--- a/pages/a_propos.html
+++ b/pages/a_propos.html
@@ -5,17 +5,15 @@
         <title> A.G. - CV ! </title>
         <link rel="stylesheet" href="../styles/index.css"/>
 
-        <a href="../index.html" class="accueil"> <button> ACCUEIL </button> </a>
     </head>
 
     <body>
         <header>
         <a href="#section" > A propos </a> 
+        <a href="../index.html" class="accueil"> ACCUEIL </a>
         </header>
         <section id="section"> 
-        <p> photo profil 
-        <img src="../img/gris.jpg" alt="fond_gris" height="42" width="42">   
-        </p>
+        <img src="../img/profil.jpg" alt="photo_profil" id="photo_header"/>   
         </section>
                   
     </body>
