--- a/pages/hobbies.html
+++ b/pages/hobbies.html
@@ -6,13 +6,12 @@
               <meta charset="UTF-8" /> 
               <title> A.G. - CV ! </title>
               <link rel="stylesheet" href="../styles/index.css"/>
-      
-              <a href="../index.html" class="accueil"> <button> ACCUEIL </button> </a>
           </head>
       
           <body>
                 <header>
-                <a href="#section" > Mes Hobbies et voyages </a> 
+                <a href="#section" > Mes Hobbies et voyages </a>
+                <a href="../index.html" class="accueil"> ACCUEIL </a> 
                 </header>
                 <section id="section"> 
                 <p>
